--- a/app/views/articles/_notify_friend.html.erb
+++ b/app/views/articles/_notify_friend.html.erb
@@ -9,6 +9,6 @@
   </div> 
   <div class="actions"> 
     <%= submit_tag 'Send' %> or 
-    <%= link_to t('general.cancel'), '#', :onclick => "$('#notify_friend_form').slideUp()" %> 
+    <%= link_to(t('general.cancel'), '#', :onclick => "$('#notify_friend_form').slideUp()") %> 
   </div> 
 <% end %> 
