--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,18 +1,18 @@
-<%= form_for([@article, @article.comments.new], remote: true, html: {style: 'display: none'}) do |f| %>
+<%= form_for([@article, @article.comments.new], :remote => true, :html => {:style => 'display: none'}) do |f| %>
     <div class="field">
-        <%= f.label :name %><br />
+        <%= f.label t('comments.name') %><br />
         <%= f.text_field :name %>
     </div>
     <div class="field">
-        <%= f.label :email %><br />
+        <%= f.label t('comments.email')%><br />
         <%= f.text_field :email %>
     </div>
     <div class="field">
-        <%= f.label :body %><br />
+        <%= f.label t('comments.body') %><br />
         <%= f.text_area :body %>
     </div>
     <div class="actions">
-        <%= f.submit 'Add' %> or 
-        <%= link_to 'Cancel', '#', onclick: "$('#new_comment').slideToggle();$('#new_comment_link').toggle()" %>
+        <%= f.submit t('comments.add') %> <%= t('general.or') %> 
+        <%= link_to(t('general.cancel'), '#', :onclick => "$('#new_comment').slideToggle();$('#new_comment_link').toggle()") %>
     </div>
 <% end %>
