--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,15 +12,15 @@
     <% end %>
     
     <div class="field">
-        <%= f.label :email %><br />
+        <%= f.label t('sessions.email') %><br />
         <%= f.text_field :email %>
     </div>
     <div class="field">
-        <%= f.label :password %><br />
+        <%= f.label t('sessions.password') %><br />
         <%= f.password_field :password %>
     </div>
     <div class="field">
-        <%= f.label :password_confirmation %><br />
+        <%= f.label t('users.password_confirmation') %><br />
         <%= f.password_field :password_confirmation %>
     </div>
     <div class="actions">
